# sparka-base-ohfixit

./: .env.example  .gitattributes  CLAUDE.md  IMPLEMENTATION_TODO.md  OHFIXIT_OVERVIEW.md  README.md  TESTING_INSTRUCTIONS.md  ai-sdk.dev_elements_components_chain-of-thought.2025-09-09T23_24_09.659Z.md  middleware.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
app/: layout.tsx  manifest.webmanifest
components/: app-sidebar.tsx  chat-features-definitions.ts  chat-header.tsx  chat-prefetch.tsx  chat-system.tsx  chat.tsx  desktop-helper-actions.tsx  desktop-helper-cta.tsx  desktop-helper-status.tsx  lexical-chat-input.tsx  message-actions.tsx  message-parts.tsx  message-reasoning.tsx  messages-pane.tsx  multimodal-input.tsx  ohfixit-approval-panel.tsx  ohfixit-audit-timeline.tsx  responsive-tools.tsx  settings-popover.tsx  sidebar-top-row.tsx  sidebar-user-nav.tsx  sign-out-form.tsx  suggested-actions.tsx
desktop-helper/: index.html  package.json
desktop-helper/src-tauri/: Cargo.toml  tauri.conf.json
desktop-helper/src-tauri/src/: lib.rs  main.rs
docs/: handoff-guide-steps-streaming.md  ohfixit-handoff.md  ohfixit-image-upload-tool-schema-handoff.md  ohfixit-integration-issue.md  ohfixit-issue-9-handoff.md  ohfixit-roadmap.md
lib/: anonymous-session-server.ts  auth-options.ts  auth.ts  clone-messages.ts  config.ts  constants.ts  logger.ts  utils.ts
providers/: chat-input-provider.tsx  phase2-provider.tsx
scripts/: create-test-user.ts
tests/: guide-mode.test.ts  screencap.test.ts
types/: next-auth.d.ts
(+170 files in other folders)
