[package]
name = "ohfixit-desktop-helper"
version = "0.1.0"
description = "OhFixIt Desktop Helper - Safe system automation"
authors = ["OhFixIt Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ohfixit-desktop-helper"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2.0.0"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
axum = "0.7"
serde_repr = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
sysinfo = { version = "0.30" }
